# celty

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SOURCE.md  pyproject.toml
.github/workflows/: release.yml
celty/: cli.py  constants.py  models.py  utils.py
celty/templates/: config.yml
vhs/tapes/: git.tape  minimal.tape
vhs/tapes/meta/: setup.tape
